deleted old papers and changed sosp to neurips

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
       <div class="inner">
           <h1>{{ site.title }}</h1>
       </a>
-      <h2>Workshop on AI Systems at SOSP 2019</h2>
+      <h2>Workshop on Systems for ML at NeurIPS 2019</h2>
       <h2></h2>
       <h2>October 27, 2019</h2>
 		<div class='mymenu'>
