--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
       </a>
       <h2>Workshop on Systems for ML at NeurIPS 2019</h2>
       <h2></h2>
-      <h2>October 27, 2019</h2>
+      <h2>December, 2019</h2>
 		<div class='mymenu'>
 			<span class='menu-link'><a href='index.html'>Home</a></span>
 			<span class='menu-link'><a href='cfp.html'>Call for Papers</a></span>
